--- a/assets/styles.index.css
+++ b/assets/styles.index.css
@@ -32,11 +32,8 @@ header .logo {
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    outline: none; border: none;
+    outline: none;
     text-decoration: none;
     text-transform: capitalize;
     transition: .2s linear;
@@ -186,7 +183,7 @@ body {
     flex: 1; 
 }
 
-.text h1 {
+.text h1 { 
     font-size: 2rem;
     margin-bottom: 10px;
 }
@@ -210,11 +207,6 @@ body {
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    background-color: #fff;
     border-bottom: 1px solid #ddd;
     position: relative;
 }
@@ -275,6 +267,7 @@ header {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+
 .logo {
     font-size: 24px;
     font-weight: bold;
@@ -323,4 +316,93 @@ header .navbar {
     align-items: center;
 }
 
+/*contato*/
+
+
+
+
+
+
+
+
+
+
+/*sobre*/
+footer p {
+    color:#e40d7191;
+    font-size: 1.2rem;
+}
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: rgba(235, 234, 234);
+    color: aliceblue;
+    margin: 0;
+}
+h1{
+    text-align: center;
+    color: black;
+}
+form{
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #e40d7191;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px;
+}
+form fieldset{
+    border: 1px dashed snow;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+from label{
+    display: block;
+    margin-bottom: 5px;
+    color: rgba(255, 79, 214, 0.418);
+}
+from legend{
+    padding: 0 10px;
+    font-weight: bold;
+    color: blueviolet;
+
+}
+form input[type="text"],
+form input[type="email"],
+form select,
+form textarea{
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1000px snow;
+    border-radius: 5px;
+}
+form input[type="radio"],
+form input[type="checkbox"] {
+    margin-right: 10px;
+}
+form button{
+    cursor: pointer;
+    background-color: rgb(255, 220, 250);
+    color: rgb(246, 152, 255);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+form button:hover{
+    background-color: violet;
+}
+
+
 /*teste*/
+
+.container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    max-width: 1200px;
+    margin: auto;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
